@@ -1,4 +1,6 @@
 
+	Information panel show artist and album for current song.
+	Installer for Windows.
 	Downloading images for albums and artists from Last.FM
 	Last.FM scrobbler (proxy supported but not tested)
 	Proxy settings for download and shoutcast (not tested yet)
